# redvector

./: .gitignore  API_INTEGRATION_STATUS.md  API_TEST_RESULTS.md  COMPLETE_TEST_RESULTS.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.benchmark  Dockerfile.debian  Dockerfile.deploy  Dockerfile.distroless  Dockerfile.ubuntu24  FINAL_TEST_RESULTS.md  FIX_HNSW_COMPILATION.md  GRPC_REFLECTION_SETUP.md  GRPC_TESTING.md  HNSW_API_FIX.md  HNSW_COMPILATION_STATUS.md  HNSW_FEATURE_FIX.md  HNSW_INTEGRATION.md  HNSW_TESTS_SUMMARY.md  INTEGRATION_SUMMARY.md  LAUNCH-KIT.md  LICENSE  RAG_BENCHMARK_REPORT.md  README.md  TESTING_HNSW.md  TEST_RESULTS.md  TODO.md  build.rs  docker-compose.yml  redvector-agent-mesh.conf  redvector.conf  run_tests.sh  test_integration.sh  test_with_docker.sh
.github/: README.md
.github/workflows/: build-release.yml  ci.yml
api-server/: .gitignore  Cargo.toml  README.md  build.rs  start.sh
api-server/proto/: vector.proto
api-server/src/: grpc.rs  main.rs  sql.rs
api-server/static/: index.html
benchmarks/: Cargo.toml  README.md  edgar_rag.rs  edgar_rag_networked.rs  hnsw_benchmark.rs  pq_bench.rs  qdrant_comparison.rs  rag_integration_bench.rs  recall_bench.rs  simd_bench.rs  vector_csv_bench.rs
command/: Cargo.toml
command/src/: command.rs  ft_commands.rs  ft_commands_full.rs  ft_multivector.rs  lib.rs
compat/: Cargo.toml
compat/src/: unix.rs
config/: Cargo.toml
config/src/: lib.rs
database/: Cargo.toml
database/rdbutil/: Cargo.toml
database/src/: bloom.rs  hash.rs  lib.rs  vector_index.rs  vector_index_test.rs  zset.rs
deploy/: README.md
deploy/kubernetes/base/: configmap.yaml  kustomization.yaml  namespace.yaml  service.yaml  statefulset.yaml
deploy/kubernetes/overlays/gcp/: kustomization.yaml  storage-class.yaml
deploy/kubernetes/overlays/local/: image-pull-policy.yaml  kustomization.yaml
deploy/scripts/: apply-gcp.sh  apply-local.sh  build-push-gcp.sh
docs/: GPU_IMPLEMENTATION_SUMMARY.md  QDRANT_COMPAT.md
docs/adr/: ADR-001-GPU-ACCELERATION.md  ADR-002-ARCHITECTURE-ADVANTAGES.md  ADR-003-RVF-V2-MULTIVECTOR.md  README.md
examples/: README.md  semantic_search.rs
logger/: Cargo.toml
networking/: Cargo.toml
networking/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
persistence/: Cargo.toml
pitch-deck/my-pitch-deck/: README.md  package-lock.json  package.json
pitch-deck/my-pitch-deck/app/: globals.css  layout.tsx  page.tsx
pitch-deck/my-pitch-deck/components/: DarkModeToggle.tsx  Navigation.tsx
pitch-deck/my-pitch-deck/components/sections/: Ask.tsx  Benchmarks.tsx  Hero.tsx  Market.tsx  Problem.tsx  Roadmap.tsx  Solution.tsx  Team.tsx
pitch-deck/my-pitch-deck/lib/: animations.ts
proto/: redvector.proto
redisearch-platform-core/: Cargo.toml
redisearch-platform-core/src/: integration.rs  lib.rs  persistent_index.rs  quantization.rs  simd_metrics.rs  storage.rs  vector_index.rs
redisearch-platform-core/src/gpu/: config.rs  cuda_backend.rs  distance.rs  flat_index.rs  ivf.rs  memory.rs  mod.rs  quantization.rs  traits.rs  wgpu_backend.rs
redisearch-platform-core/src/rvf2/: codec.rs  doc_index.rs  manifest.rs  maxsim.rs  mod.rs  object_store.rs  prefetch.rs  segment.rs  tiered_store.rs
response/: Cargo.toml
src/: api.rs  main.rs  qdrant_api.rs
tests/support/: server.tcl
tests/unit/: printver.tcl
util/: Cargo.toml
