[package]
name = "redvector"
version = "0.1.0"
authors = [ "Rafael Escrich <rafaelescrich@gmail.com>" ]
description = "Redis-Compatible Vector Database with GPU Acceleration"
license = "Apache-2.0"
repository = "https://github.com/rafaelescrich/redvector"
keywords = ["redis", "vector", "database", "hnsw", "search"]
categories = ["database", "development-tools"]
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
]
build = "build.rs"
edition = "2021"

[[bin]]
name = "redvector"
doc = false

[dependencies]
# Workspace crates
config = { path = "config" }
util = { path = "util" }
parser = { path = "parser" }
response = { path = "response" }
database = { path = "database", features = [] }
command = { path = "command" }
networking = { path = "networking" }
logger = { path = "logger" }
compat = { path = "compat" }

# REST API dependencies (optional)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# gRPC dependencies (optional)
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }

# SQL support (optional)
sqlparser = { version = "0.39", optional = true }

[build-dependencies]
tonic-build = { version = "0.11", optional = true }

[features]
default = []
vector-search = ["command/vector-search"]
hnsw-backend = ["database/hnsw-backend", "command/hnsw-backend"]
fast-vector-csv = ["parser/fast-vector-csv", "command/fast-vector-csv"]
# Integrated API server (REST + gRPC in same binary)
api-server = [
    "dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", 
    "dep:serde", "dep:serde_json", 
    "dep:tonic", "dep:prost", "dep:tonic-build",
    "dep:sqlparser"
]
# Full feature set: vector search + HNSW + API server
full = ["vector-search", "hnsw-backend", "api-server"]
