[package]
name = "redvector-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
redis = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# gRPC support
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
tonic-reflection = "0.11"

# SQL support
sqlparser = "0.39"

[[bin]]
name = "grpc_test"
path = "src/bin/grpc_test.rs"

[build-dependencies]
tonic-build = "0.11"

