[package]
name = "rsedis-benchmarks"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "qdrant_comparison"
path = "qdrant_comparison.rs"

[[bin]]
name = "hnsw_benchmark"
path = "hnsw_benchmark.rs"

[dependencies]
redis = "0.24"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
database = { path = "../database" }

[features]
default = []
hnsw-backend = ["database/hnsw-backend"]

[dev-dependencies]
