[package]
name = "redisearch-platform-core"
version = "0.1.0"
edition = "2021"
authors = ["Redisearch Platform Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Vector search
hnsw_rs = "0.1"
# wider = "0.2"  # SIMD support (Phase 2)

# Persistence
redb = "1.0"
bincode = "1.3"

# Redis client
redis = "0.24"

# Utilities
lru = "0.12"
fastrand = "2.0"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
fastrand = "2.0"

[[bench]]
name = "vector_performance"
harness = false

[[bench]]
name = "simd_benchmarks"
harness = false
