[package]
name = "redisearch-platform-core"
version = "0.1.0"
edition = "2021"
authors = ["Redisearch Platform Contributors"]
license = "MIT OR Apache-2.0"

[features]
default = []
# RVF v2: Multi-vector storage for ColPali/ColBERT
rvf2 = ["dep:memmap2", "dep:half", "dep:crc32fast", "dep:rmp-serde", "dep:bytes", "dep:async-trait", "dep:futures"]
# S3 object storage support
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
# GPU acceleration (see ADR-001)
gpu-wgpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]
gpu-cuda = ["dep:cudarc"]
# All GPU features
gpu-all = ["gpu-wgpu", "gpu-cuda"]
# Full feature set
full = ["rvf2", "s3", "gpu-wgpu"]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Vector search
hnsw_rs = "0.1"
# wider = "0.2"  # SIMD support (Phase 2)

# Persistence
redb = "1.0"
bincode = "1.3"

# Redis client
redis = "0.24"

# Utilities
lru = "0.12"
fastrand = "2.0"

# RVF2 dependencies (feature-gated)
memmap2 = { version = "0.9", optional = true }
half = { version = "2.3", optional = true }
crc32fast = { version = "1.3", optional = true }
rmp-serde = { version = "1.1", optional = true }
bytes = { version = "1.5", optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

# S3 dependencies (feature-gated)
aws-sdk-s3 = { version = "1.0", optional = true }
aws-config = { version = "1.0", optional = true }

# GPU dependencies (feature-gated)
wgpu = { version = "22.0", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }
cudarc = { version = "0.12", optional = true }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
fastrand = "2.0"
tempfile = "3.8"

# Benchmarks (uncomment when benchmark files are created)
# [[bench]]
# name = "vector_performance"
# harness = false
#
# [[bench]]
# name = "simd_benchmarks"
# harness = false
